html layout issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+.image-resize {
+  height: 500px;
+}
+
 .image-resize img {
-  max-height: calc(100vh - 100px);
+  height: 100%;
+}
+
+.budget-bg-color {
+  background-color: #f8f8f8;
+}
+
+@media screen and (max-width: 767px) {
+  .image-resize {
+    height: 100%;
+  }
+}
+
+label {
+  width: 80px;
+  display: inline-block;
+  margin-left: auto;
 }
